Cleanup the N2NM code ... the synchronization changes need testing
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@11705 67a373e5-eb02-0410-a15c-ee090a768436